# tg-files-to-s3

./: .env.rename  LICENSE  README.md  TODO  TODO.md  docker-compose.yml  pyproject.toml
api/: main.py  requirements.txt
api/core/: config.py  database.py  files.py  models.py  queue.py
api/routers/: balance.py  file.py  pricing.py  transaction.py  user.py
rabbitmq/: Dockerfile  init-rabbitmq.sh
telegram_bot/: Test1.session  bot.py  main.py  sqlliteconnector.py
tests/: test_api_auth.py  test_api_file.py
tg_bot/: Dockerfile  main.py
