[tool.poetry]
name = "tg-files-to-s3"
version = "0.10.0"
description = "pg-fastapi-rabbitmq-minio-pyrogram-docker"
authors = ["vadim <vdmsurin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.88.0"}
sqlmodel = "^0.0.8"
psycopg2 = "^2.9.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
minio = "^7.2.5"
aio-pika = "^9.4.1"
aiofiles = "^23.2.1"
bcrypt = "^4.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.21.0"
trio = "^0.22.0"


[tool.poetry.group.docs.dependencies]
coverage-badge = "^1.1.0"
mkdocs-material = "^8.5.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
